Some more file structure establishment.
Working on the database creation script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 node_modules
-*.sublime*
 config.js
+
+# Editor Files #
+################
+.idea
 sublime
+*.sublime*
 
 # Logs and databases #
 ######################
