--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple encoding game for use with Axis and Allies",
   "main": "server.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
     "express": "^4.14.1",
